--- a/index.html
+++ b/index.html
@@ -258,6 +258,11 @@
   </div>
 
 
+  <footer>
+    <small>© ByOne nayeemislam5031 . All right reaerved</small>
+  </footer>
+
+
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
